--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
     <div class="container">
+        <div class="message">
+            <p>Esse site vai ser vitalício.</p>
+            <p>Não é como se todos pudessem acessar, só quem tem acesso ao link dele (eu e você). Site importante pq é meu primeiro "projeto" grande assim, ainda mais dedicado a você. Eu falei que iria melhorando ele com o tempo e tô fazendo isso aos poucos, estou te enviando ele hoje 11/06/2024 mas eu iria te enviar amanhã 12/06/2024.</p>
+            <p>Não tem um motivo específico pra isso, só cismei.</p>
+            <p>Se você realmente abrir esse site e ler isso, saiba que eu te amo.</p>
+            <p>Muito.</p>
+            <p>Tá bem simples, mas com o tempo vai ficando melhor e vou adicionando mais coisas, mais abas, deixando mais bonito e etc.</p>
+            <p>Bom, é o tipo de coisa que eu gostaria de poder te falar pessoalmente, mas como não é o caso, Eu te amo demais e eu espero com todo o meu coração que você se sinta amada por mim, e se não se sentir, que em algum momento isso aconteça e que eu consiga te proporcionar muitos momentos felizes.</p>
+            <p>Agora pode ficar "a vontade" nesse projeto q se Deus quiser não vai acabar nunca.</p>
+        </div>
         <button onclick="location.href='musica.html'">Ver Letra</button>
         <button onclick="location.href='https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa'">Spotify Playlist</button>
     </div>
