--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <p>Bom, é o tipo de coisa que eu gostaria de poder te falar pessoalmente, mas como não é o caso, Eu te amo demais e eu espero com todo o meu coração que você se sinta amada por mim, e se não se sentir, que em algum momento isso aconteça e que eu consiga te proporcionar muitos momentos felizes.</p>
             <p>Agora pode ficar "a vontade" nesse projeto q se Deus quiser não vai acabar nunca.</p>
         </div>
-        <button onclick="location.href='lyrics.html'">Ver Letra</button>
+        <button onclick="location.href='musica.html'">Ver Letra</button>
         <button onclick="location.href='https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa'">Spotify Playlist</button>
-        <button onclick="location.href='password.html'">Acessar Imagens</button>
+        <button onclick="location.href='password.html'">segredo</button>
     </div>
 </body>
 </html>
