--- a/images.html
+++ b/images.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h2>Imagens</h2>
-        <img src="images/kkkkkkkkkkkkkkk" class="center">
+        <img src="images/kkkkkkkkkkkkkkk.jpg" class="center">
         <!-- Adicione mais imagens conforme necessário -->
     </div>
 </body>
