--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <button onclick="location.href='musica.html'">Ver Letra</button>
         <button onclick="location.href='https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa'">Spotify Playlist</button>
         <button onclick="location.href='password.html'">segredo</button>
+        <button onclick="location.href='textos.html'">para o meu bem</button>
     </div>
 </body>
 </html>
