--- a/textos.html
+++ b/textos.html
@@ -11,7 +11,14 @@
         <div class="message">
             <p>Oi meu amor</p>
             <p>Ontem, 12/06/2024, eu coloquei uma foto na outra página BASTANTE íntima, mais intima do que ela ja seria.</p>
-            <p>Você tinha me pedido antes e eu não te mandei por não ser uma parte de mim que alguém já tivesse visto, nem tanto pela parte física mas </p>
+            <p>Você ja tinha me pedido pela foto e eu não te mandei, mas nem por isso você insistiu ou se revoltou comigo por conta disso. Você me respeitou e me respeita em varios sentidos, nem imagina o quanto eu sou grata por isso.</p>
+            <p>Como eu te falei, eu faço questão que você seja unica em aspectos da minha vida que eu jamais quis que alguem fosse, isso por eu me sentir confortável contigo, me sentir acolhida e não como se eu fosse qualquer uma.</p>
+            <p>Eu sou uma pessoa que não gosta de contato físico, prefiro ficar horas em silencio do que falando e amo ficar sozinha a maior parte do tempo, e é incrivel como me torno o total oposto disso quando se trata de você. Eu simplesmente amo estar contigo, estar agarrada em você, falar com você, a sua presença</p>
+            <p>Muito ruim ter tido poucas oportunidades de estar fisicamente ao seu lado, mas porra, não esqueço de nenhum detalhe quando se trata de você. Poder olhas nos seus olhos e te ver vidrada em mim, fazer questão que eu estivesse por perto, te abraçar pq você tem o melhor abraço do mundo, dormir com você e sempre te abraçar no meio da noite e ganhar alguns beijinhos aleatórios de brinde, te ver dormindo te fazendo carinho justamento por não saber quando vou ter essa oportunidade novamente. E principalmente, não esquecer nunca de você depois de acordar, pq você é linda demais, perfeita demais, independente do horario do dia.</p>
+            <p>caralho meu deus que saudade</p>
+            <p>Nesse ponto eu já nao vejo motivos pra não te querer na minha vida, eu te quero demais, eu te amo demais e eu espero que você veja o quão importante você é pra mim. Na playlist tem uma musica da Ariana chamada tattooed heart, que é o unico motivo de eu fazer tanta questão de tatuar seu nome no meu peito.</p>
+            <p>Então hoje, 13/06/2024, vou deixar isso aqui registrado e logo mais, essa pagina vai lotar de recados como esse.</p>
+            <p>-----//-----</p>
         </div>
     </div>
 </body>
