--- a/textos.html
+++ b/textos.html
@@ -19,6 +19,13 @@
             <p>Nesse ponto eu já nao vejo motivos pra não te querer na minha vida, eu te quero demais, eu te amo demais e eu espero que você veja o quão importante você é pra mim. Na playlist tem uma musica da Ariana chamada tattooed heart, que é o unico motivo de eu fazer tanta questão de tatuar seu nome no meu peito.</p>
             <p>Então hoje, 13/06/2024, vou deixar isso aqui registrado e logo mais, essa pagina vai lotar de recados como esse.</p>
             <p>-----//-----</p>
+            <p>15/06/2024</p>
+            <p>você me deve uma surpresa!!!!</p>
+            <p>Hoje fui correr na praia com meu amigo e o tempo todo só conseguia pensar em você. Estávamos na pedra do arpoador, aquela vista maravilhosa que só o Rio de Janeiro poderia proporcionar e eu só conseguia pensar em você comigo. Consigo pensar em mil encontros que poderia ter contigo, rodar essa cidade inteira, andar de mãos dadas com você dizendo que você é minha namorada pro mundo inteiro ouvir e mostrar que te amo a cada instante.
+               Tudo no momento me faz pensar como seria se tivesse você do meu lado agora, fazendo tudo e qualquer coisa e simplesmente vivendo para te reconquistar a cada dia pra não correr risco de te perder. Se eu disser que não estou preocupada com isso eu estaria mentindo, tudo é possível nesse mundo, mas também acredito que nós duas vamos ser pra sempre e que independente do tempo que levar e a distancia, sempre vamos estar ligadas de alguma forma. Pode ser que fique repetitivo dizer que te amo o tempo todo e todo dia, mas cada parte de mim te ama cada vez mais a cada dia, sua risada, seus olhos, seu sorriso, a forma que você fala quando está muito feliz e animada, a forma que você anda, como você trata os seus irmãos com tanto amor e principalmente sua alma que é gêmea da minha. Eu amo te amar e a saudade dói, machuca, a distancia machuca. Independente disso, tudo parece se intensificar mais e mais e dessa vez eu não tenho medo algum de te amar tanto assim.
+               Estou tentando não te perturbar pra me responder, te ligar igual uma maluca querendo atenção ou ficar te lotando de mensagens que eu sei que você não vai ver, ainda mais agora vivendo em tempos diferentes (literalmente) você com a vida em outro país e eu com a vida corrida sempre mas sempre que você aparecer vou te dar toda atenção do mundo, mesmo que isso signifique desregular totalmente meu sono.</p>
+            <p>Eu te amo demais e espero que você se sinta amada por mim.</p>
+            <p>-----//-----</p>
         </div>
     </div>
 </body>
