--- a/13062024.html
+++ b/13062024.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para o meu bem</title>
+    <title>13/06/2024</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
             <p>Nesse ponto eu já nao vejo motivos pra não te querer na minha vida, eu te quero demais, eu te amo demais e eu espero que você veja o quão importante você é pra mim. Na playlist tem uma musica da Ariana chamada tattooed heart, que é o unico motivo de eu fazer tanta questão de tatuar seu nome no meu peito.</p>
             <p>Então hoje, 13/06/2024, vou deixar isso aqui registrado e logo mais, essa pagina vai lotar de recados como esse.</p>
         </div>
-        <button onclick="location.href='15062024.html'">15/06/2024</button>
+        <button onclick="location.href='Central.html'">Biblioteca</button>
     </div>
 </body>
 </html>
