--- a/15062024.html
+++ b/15062024.html
@@ -15,9 +15,8 @@
                Tudo no momento me faz pensar como seria se tivesse você do meu lado agora, fazendo tudo e qualquer coisa e simplesmente vivendo para te reconquistar a cada dia pra não correr risco de te perder. Se eu disser que não estou preocupada com isso eu estaria mentindo, tudo é possível nesse mundo, mas também acredito que nós duas vamos ser pra sempre e que independente do tempo que levar e a distancia, sempre vamos estar ligadas de alguma forma. Pode ser que fique repetitivo dizer que te amo o tempo todo e todo dia, mas cada parte de mim te ama cada vez mais a cada dia, sua risada, seus olhos, seu sorriso, a forma que você fala quando está muito feliz e animada, a forma que você anda, como você trata os seus irmãos com tanto amor e principalmente sua alma que é gêmea da minha. Eu amo te amar e a saudade dói, machuca, a distancia machuca. Independente disso, tudo parece se intensificar mais e mais e dessa vez eu não tenho medo algum de te amar tanto assim.
                Estou tentando não te perturbar pra me responder, te ligar igual uma maluca querendo atenção ou ficar te lotando de mensagens que eu sei que você não vai ver, ainda mais agora vivendo em tempos diferentes (literalmente) você com a vida em outro país e eu com a vida corrida sempre mas sempre que você aparecer vou te dar toda atenção do mundo, mesmo que isso signifique desregular totalmente meu sono.</p>
             <p>Eu te amo demais e espero que você se sinta amada por mim.</p>
-            <p>-----//-----</p>
         </div>
-        <button onclick="location.href='13062024.html'">13/06/2024</button>   
+        <button onclick="location.href='Central.html'">Biblioteca</button>
     </div>
 </body>
 </html>
