--- a/password.html
+++ b/password.html
@@ -8,6 +8,14 @@
     <script src="scripts.js" defer></script>
 </head>
 <body>
+    <div class="menu">
+        <div class="menu-button" onclick="toggleMenu()">------Páginas------</div>
+        <div class="menu-content">
+            <button onclick="location.href='musica.html'">Ver Letra</button>
+            <button onclick="location.href='https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa'">Spotify Playlist</button>
+            <button onclick="location.href='password.html'">segredo</button>
+            <button onclick="location.href='Central.html'">Biblioteca</button>
+        </div>   
     <div class="container">
         <h2>Digite a Senha</h2>
         <input type="password" id="password" placeholder="Senha">
