--- a/Central.html
+++ b/Central.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="menu">
+        <div class="menu-button" onclick="toggleMenu()">------Páginas------</div>
+        <div class="menu-content">
+            <button onclick="location.href='musica.html'">Ver Letra</button>
+            <button onclick="location.href='https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa'">Spotify Playlist</button>
+            <button onclick="location.href='password.html'">segredo</button>
+            <button onclick="location.href='Central.html'">Biblioteca</button>
+        </div>   
     <div class="container">
         <div class="message">
             <p>Aqui você pode achar todos os textos que eu fiz pra ti :)</p>
