--- a/password.html
+++ b/password.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <div class="menu">
-        <div class="menu-button" onclick="toggleMenu()">------Páginas------</div>
+        <button class="menu-button" onclick="toggleMenu()">Páginas</button>
         <div class="menu-content">
             <button onclick="location.href='musica.html'">Ver Letra</button>
             <button onclick="location.href='https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa'">Spotify Playlist</button>
             <button onclick="location.href='password.html'">segredo</button>
             <button onclick="location.href='Central.html'">Biblioteca</button>
-        </div>   
+        </div>
+    </div>
     <div class="container">
         <h2>Digite a Senha</h2>
         <input type="password" id="password" placeholder="Senha">
@@ -24,3 +25,4 @@
     </div>
 </body>
 </html>
+
