--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <script src="scripts.js" defer></script>
 </head>
 <body>
-      <div class="menu">
-        <div class="menu-button" onclick="toggleMenu()">------Páginas------</div>
+    <div class="menu">
+        <button class="menu-button" onclick="toggleMenu()">Páginas</button>
         <div class="menu-content">
             <button onclick="location.href='musica.html'">Ver Letra</button>
             <button onclick="location.href='https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa'">Spotify Playlist</button>
             <button onclick="location.href='password.html'">segredo</button>
             <button onclick="location.href='Central.html'">Biblioteca</button>
         </div>
+    </div>
     <div class="container">
         <div class="message">
             <p>Esse site vai ser vitalício.</p>
@@ -30,4 +31,3 @@
     </div>
 </body>
 </html>
-
