--- a/musica.html
+++ b/musica.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="menu">
-        <div class="menu-button" onclick="toggleMenu()">------Páginas------</div>
+        <div class="menu-button" onclick="toggleMenu()">Páginas</div>
         <div class="menu-content">
             <button onclick="location.href='musica.html'">Ver Letra</button>
             <button onclick="location.href='https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa'">Spotify Playlist</button>
