--- a/images.html
+++ b/images.html
@@ -14,6 +14,7 @@
             <button onclick="location.href='https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa'">Spotify Playlist</button>
             <button onclick="location.href='password.html'">segredo</button>
             <button onclick="location.href='Central.html'">Biblioteca</button>
+            <button onclick="location.href='index.html'">inicio</button>
         </div>   
     <div class="container">
         <img src="images/20240608_201707.jpg" class="center">
