--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </div>
     <div class="container">
         <div class="message">
+   <p>Ultima atualização 17/06/2024 às 19:11</p>
             <p>Esse site vai ser vitalício.</p>
             <p>Não é como se todos pudessem acessar, só quem tem acesso ao link dele (eu e você). Site importante pq é meu primeiro "projeto" grande assim, ainda mais dedicado a você. Eu falei que iria melhorando ele com o tempo e tô fazendo isso aos poucos, estou te enviando ele hoje 11/06/2024 mas eu iria te enviar amanhã 12/06/2024.</p>
             <p>Não tem um motivo específico pra isso, só cismei.</p>
