--- a/atualizacao.html
+++ b/atualizacao.html
@@ -21,6 +21,7 @@
         <div class="message">
    <p>Ultima atualização 18/06/2024 às 15:20</p>
             <p>O que mudou:</p>
+            <p>A cor do botão mudou para a cor dos seus olhos💙</p>
             <p>Mais uma mensagem adicionada na página "Biblioteca"</p>
             <p>Pagina de atualização criada para informar as atualizações do site</p>
             <p>imagem da página "segredo" ficará disponível até dia 21/06/2024</p>
