--- a/18062024.html
+++ b/18062024.html
@@ -32,6 +32,12 @@
             <p>Nunca quis ser mãe, nunca fiz questao de ter uma família ou um futuro com alguém mas desde que seja com você eu quero absolutamente tudo o que eu puder ter nessa vida. Espero que daqui a um tempo a Allanna, Hannah e o Henrique (opcional) saibam que você é o grande amor da minha vida.</p>
             <p>Te amo infinitamente meu bem</p>
         </div>
+        <!-- Caixa de mensagens -->
+        <div class="message-box">
+            <h2>Deixe uma Mensagem</h2>
+            <textarea id="message" rows="4" cols="50" placeholder="Escreva sua mensagem aqui..."></textarea>
+            <button onclick="sendMessage()">Enviar Mensagem</button>
+        </div>
         <button onclick="location.href='Central.html'">Biblioteca</button>
     </div>
 </body>
