--- a/Central.html
+++ b/Central.html
@@ -25,6 +25,7 @@
         <button onclick="location.href='15062024.html'">15/06/2024</button>
         <button onclick="location.href='17062024.html'">17/06/2024</button>
         <button onclick="location.href='18062024.html'">18/06/2024</button>
+        <button onclick="location.href='20062024.html'">20/06/2024</button>
     </div>
 </body>
 </html>
