--- a/images.html
+++ b/images.html
@@ -18,6 +18,7 @@
         </div>   
     <div class="container">
         <img src="images/20240608_201707.jpg" class="center">
+        <img src="images/20240624_211838.jpg" class="center">
         <!-- Adicione mais imagens conforme necessário -->
     </div>
 </body>
