--- a/atualizacao.html
+++ b/atualizacao.html
@@ -20,8 +20,9 @@
     </div>
     <div class="container">
         <div class="message">
-   <p>Ultima atualização 20/06/2024 às 21:06</p>
+   <p>Ultima atualização 25/06/2024 às 21:06</p>
             <p>O que mudou:</p>
+            <p> Mais uma foto adicionada na página segredo</p>
             <p> Cor do site mudou para a cor dos seus olhos TAMBÉM ( pq seus olhos tem mais de uma cor e não vai caber todas aqui) </p>
             <p>A cor do botão mudou para a cor dos seus olhos💙</p>
             <p>Mais uma mensagem adicionada na página "Biblioteca"</p>
