--- a/Central.html
+++ b/Central.html
@@ -26,6 +26,7 @@
         <button onclick="location.href='17062024.html'">17/06/2024</button>
         <button onclick="location.href='18062024.html'">18/06/2024</button>
         <button onclick="location.href='20062024.html'">20/06/2024</button>
+        <button onclick="location.href='25062024.html'">25/06/2024</button>
     </div>
 </body>
 </html>
