--- a/Central.html
+++ b/Central.html
@@ -27,6 +27,7 @@
         <button onclick="location.href='18062024.html'">18/06/2024</button>
         <button onclick="location.href='20062024.html'">20/06/2024</button>
         <button onclick="location.href='25062024.html'">25/06/2024</button>
+        <button onclick="location.href='Top 6 coisas específicas que eu amo em você que era pra ser Top 5 mas não gosto de número ímpar e 6 é par.html'">Top 6 coisas específicas que eu amo em você que era pra ser Top 5 mas não gosto de número ímpar e 6 é par</button>
     </div>
 </body>
 </html>
