--- a/atualizacao.html
+++ b/atualizacao.html
@@ -20,8 +20,9 @@
     </div>
     <div class="container">
         <div class="message">
-   <p>Ultima atualização 25/06/2024 às 21:06</p>
+   <p>Ultima atualização 26/06/2024 às 08:25</p>
             <p>O que mudou:</p>
+            <p> "Top 6 coisas específicas que eu amo em você que era pra ser Top 5 mas não gosto de número ímpar e 6 é par" criado na página "Biblioteca"</p>
             <p> Mais uma foto adicionada na página segredo</p>
             <p> Cor do site mudou para a cor dos seus olhos TAMBÉM ( pq seus olhos tem mais de uma cor e não vai caber todas aqui) </p>
             <p>A cor do botão mudou para a cor dos seus olhos💙</p>
