--- a/25062024.html
+++ b/25062024.html
@@ -25,5 +25,7 @@
             <p> enfim, tem coisa nova laaa naquela parte com senha então qualquer coisa dá uma olhada lá que talvez você goste. Hoje não tenho muito a dizer, minha mente tá martelando várias coisas e eu tô tentando ignorar pra não ficar paranoica sem motivo.</p>
             <p>Te amo</p>
     </div>
+        <button onclick="location.href='Central.html'">Biblioteca</button>
+    </div>
 </body>
 </html>
