Update Top 6 coisas específicas que eu amo em você que era pra ser Top 5 mas não gosto de número ímpar e 6 é par.html

--- a/Top 6 coisas específicas que eu amo em você que era pra ser Top 5 mas não gosto de número ímpar e 6 é par.html
+++ b/Top 6 coisas específicas que eu amo em você que era pra ser Top 5 mas não gosto de número ímpar e 6 é par.html
@@ -27,5 +27,7 @@
             <p>Tem mais coisas obviamente mas essas são as mais específicas que vira e mexe eu fico lembrando e puta que pariu eu vou surtar a gente precisa ser mãe (17 e 19 anos) enfim neh</p>
             <p>Eu ia colocar isso ontem 25/06/2024 mas eu escrevi o código errado daí deu erro enfim, mais tarde atualizo o site dnv na maior paz e graças a deus nada da errado amem</p>
     </div>
+        <button onclick="location.href='Central.html'">Biblioteca</button>
+    </div>
 </body>
 </html>
