--- a/Amor.html
+++ b/Amor.html
@@ -37,6 +37,7 @@
 </head>
 <body>
     <div id="phrase">Aperte o botão!</div>
+    <p>Pode apertar mais de uma vez!</p>
     <button id="loveButton">😃🫶🏽</button>
     <script src="amor.js"></script>
 </body>
