--- a/Amor.html
+++ b/Amor.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             text-align: center;
             margin-top: 50px;
-            background-color: #f0f0f0;
+            background-color: #827E4F;
             color: #333;
         }
         #phrase {
