--- a/Amor.html
+++ b/Amor.html
@@ -39,6 +39,7 @@
     <div id="phrase">Aperte o botão!</div>
     <p>Pode apertar mais de uma vez!</p>
     <button id="loveButton">😃🫶🏽</button>
+        <button onclick="location.href='index.html'">Inicio</button>
     <script src="amor.js"></script>
 </body>
 </html>
