--- a/atualizacao.html
+++ b/atualizacao.html
@@ -21,8 +21,9 @@
     </div>
     <div class="container">
         <div class="message">
-   <p>Ultima atualização 26/06/2024 às 19:51</p>
+   <p>Ultima atualização 27/06/2024 às 22:31</p>
             <p>O que mudou:</p>
+            <p>Pagina onde é gerado a frase "Eu te amo" em todas as línguas criado</p>
             <p>Jogo da Velha adicionado</p>
             <p> "Top 6 coisas específicas que eu amo em você que era pra ser Top 5 mas não gosto de número ímpar e 6 é par" criado na página "Biblioteca"</p>
             <p> Mais uma foto adicionada na página segredo</p>
