--- a/Central.html
+++ b/Central.html
@@ -30,6 +30,7 @@
         <button onclick="location.href='Top 6 coisas específicas que eu amo em você que era pra ser Top 5 mas não gosto de número ímpar e 6 é par.html'">Top 6 coisas específicas que eu amo em você que era pra ser Top 5 mas não gosto de número ímpar e 6 é par</button>
         <button onclick="location.href='26062024.html'">26/06/2024</button>
         <button onclick="location.href='perguntinhas.html'">perguntinhas</button>
+        <button onclick="location.href='01072024.html'">01/07/2024</button>
     </div>
 </body>
 </html>
