--- a/20062024.html
+++ b/20062024.html
@@ -13,7 +13,7 @@
             <button onclick="location.href='musica.html'">Ver Letra</button>
             <button onclick="location.href='https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa'">Spotify Playlist</button>
             <button onclick="location.href='password.html'">segredo</button>
-            <button onclick="location.href='jogodavelha.html'">Jogo da velha</button>
+                        <button onclick="location.href='jogos.html'">Jogos</button>
             <button onclick="location.href='index.html'">inicio</button>
         </div>   
     <div class="container">
