--- a/jogos.html
+++ b/jogos.html
@@ -21,6 +21,7 @@
             <p>Aqui você pode achar todos os jogos que eu fiz pra ti :)</p>
         </div>
          <button onclick="location.href='jogodavelha.html'">Jogo da velha</button>
+<button onclick="location.href='mastermind.html'">mastermind</button>
     </div>
 </body>
 </html>
