--- a/mastermind.html
+++ b/mastermind.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="stylemastermind.css">
 </head>
 <body>
+    <div class="menu">
+        <button class="menu-button" onclick="toggleMenu()">Páginas</button>
+        <div class="menu-content">
+            <button onclick="location.href='musica.html'">Ver Letra</button>
+            <button onclick="location.href='https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa'">Spotify Playlist</button>
+            <button onclick="location.href='password.html'">segredo</button>
+                        <button onclick="location.href='jogos.html'">Jogos</button>
+            <button onclick="location.href='Central.html'">Biblioteca</button>
+            <button onclick="location.href='index.html'">inicio</button>
+        </div>
     <h1>Jogo Mastermind</h1>
     <div class="game-board">
         <div class="row">
