--- a/jogodavelha.html
+++ b/jogodavelha.html
@@ -16,6 +16,7 @@
                         <button onclick="location.href='jogos.html'">Jogos</button>
             <button onclick="location.href='Central.html'">Biblioteca</button>
             <button onclick="location.href='index.html'">inicio</button>
+    <link rel="stylesheet" href="styles.css">
         </div>
     <h1>Jogo da Velha</h1>
     <div class="board">
