--- a/jogodavelha.html
+++ b/jogodavelha.html
@@ -29,5 +29,6 @@
             <button onclick="location.href='Central.html'">Biblioteca</button>
             <button onclick="location.href='index.html'">inicio</button>
     <link rel="stylesheet" href="styles.css">
+       </div>
 </body>
 </html>
