--- a/mastermind.html
+++ b/mastermind.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Rogue-like Game</h1>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
-    <script src="script.js"></script>
+    <script src="scriptmastermind.js"></script>
     <div class="menu">
         <button class="menu-button" onclick="toggleMenu()">Páginas</button>
         <div class="menu-content">
