--- a/mastermind.html
+++ b/mastermind.html
@@ -4,22 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rogue-like Game</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylemastermind.css">
 </head>
 <body>
     <h1>Rogue-like Game</h1>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <script src="scriptmastermind.js"></script>
-    <div class="menu">
-        <button class="menu-button" onclick="toggleMenu()">Páginas</button>
-        <div class="menu-content">
-            <button onclick="location.href='musica.html'">Ver Letra</button>
-            <button onclick="location.href='https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa'">Spotify Playlist</button>
-            <button onclick="location.href='password.html'">segredo</button>
-                        <button onclick="location.href='jogos.html'">Jogos</button>
-            <button onclick="location.href='Central.html'">Biblioteca</button>
-            <button onclick="location.href='index.html'">inicio</button>
-    <link rel="stylesheet" href="styles.css">
-      </div>
 </body>
 </html>
