--- a/mastermind.html
+++ b/mastermind.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rogue-like Game</title>
+    <title>Snake Game</title>
     <link rel="stylesheet" href="stylemastermind.css">
 </head>
 <body>
-    <h1>Rogue-like Game</h1>
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <h1>Snake Game</h1>
+    <canvas id="gameCanvas" width="400" height="400"></canvas>
     <script src="scriptmastermind.js"></script>
 </body>
 </html>
