--- a/mastermind.html
+++ b/mastermind.html
@@ -9,6 +9,13 @@
 <body>
     <h1>Snake Game</h1>
     <canvas id="gameCanvas" width="400" height="400"></canvas>
+    <div id="controls">
+        <button id="upButton">Up</button>
+        <button id="leftButton">Left</button>
+        <button id="downButton">Down</button>
+        <button id="rightButton">Right</button>
+    </div>
+    <button id="redirectButton">Ir para outra página</button>
     <script src="scriptmastermind.js"></script>
 </body>
 </html>
