--- a/mastermind.html
+++ b/mastermind.html
@@ -15,7 +15,7 @@
         <button id="downButton">Down</button>
         <button id="rightButton">Right</button>
     </div>
-    <button id="redirectButton">Ir para outra página</button>
+    <button id="redirectButton">Ir para o início</button>
     <script src="scriptmastermind.js"></script>
 </body>
 </html>
