--- a/atualizacao.html
+++ b/atualizacao.html
@@ -21,8 +21,10 @@
     </div>
     <div class="container">
         <div class="message">
-   <p>Ultima atualização 27/06/2024 às 22:31</p>
+   <p>Ultima atualização 01/07/2024 às 22:31</p>
             <p>O que mudou:</p>
+            <p>Jogo da cobrança em manutenção por erro de código</p>
+            <p> Mais um texto adicionado à página "Biblioteca"</p>
             <p>Pagina onde é gerado a frase "Eu te amo" em todas as línguas criado</p>
             <p>Jogo da Velha adicionado</p>
             <p> "Top 6 coisas específicas que eu amo em você que era pra ser Top 5 mas não gosto de número ímpar e 6 é par" criado na página "Biblioteca"</p>
