--- a/mastermind.html
+++ b/mastermind.html
@@ -3,19 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game</title>
+    <title>Jogo de Damas</title>
     <link rel="stylesheet" href="stylemastermind.css">
 </head>
 <body>
-    <h1>Snake Game</h1>
-    <canvas id="gameCanvas" width="400" height="400"></canvas>
-    <div id="controls">
-        <button id="upButton">Up</button>
-        <button id="leftButton">Left</button>
-        <button id="downButton">Down</button>
-        <button id="rightButton">Right</button>
-    </div>
-    <button id="redirectButton">Ir para o início</button>
+    <h1>Jogo de Damas</h1>
+    <canvas id="gameCanvas" width="800" height="800"></canvas>
     <script src="scriptmastermind.js"></script>
 </body>
 </html>
