--- a/mastermind.html
+++ b/mastermind.html
@@ -9,6 +9,10 @@
 <body>
     <h1>Jogo de Damas</h1>
     <canvas id="gameCanvas" width="800" height="800"></canvas>
+    <div class="controls">
+        <button id="restartButton">Reiniciar Tabuleiro</button>
+        <button id="redirectButton">Ir para outra página</button>
+    </div>
     <script src="scriptmastermind.js"></script>
 </body>
 </html>
