--- a/atualizacao.html
+++ b/atualizacao.html
@@ -21,9 +21,10 @@
     </div>
     <div class="container">
         <div class="message">
-   <p>Ultima atualização 01/07/2024 às 22:31</p>
+   <p>Ultima atualização 02/07/2024 às 07:36</p>
             <p>O que mudou:</p>
-            <p>Jogo da cobrança em manutenção por erro de código</p>
+            <p>Jogo de damas adicionado a pagina "Jogos"</p>
+            <p> Central de jogos criado </p>
             <p> Mais um texto adicionado à página "Biblioteca"</p>
             <p>Pagina onde é gerado a frase "Eu te amo" em todas as línguas criado</p>
             <p>Jogo da Velha adicionado</p>
