--- a/mastermind.html
+++ b/mastermind.html
@@ -11,7 +11,7 @@
     <canvas id="gameCanvas" width="800" height="800"></canvas>
     <div class="controls">
         <button id="restartButton">Reiniciar Tabuleiro</button>
-        <button id="redirectButton">Ir para outra página</button>
+        <button id="redirectButton">Voltar</button>
     </div>
     <script src="scriptmastermind.js"></script>
 </body>
