--- a/Central.html
+++ b/Central.html
@@ -31,6 +31,7 @@
         <button onclick="location.href='26062024.html'">26/06/2024</button>
         <button onclick="location.href='perguntinhas.html'">perguntinhas</button>
         <button onclick="location.href='01072024.html'">01/07/2024</button>
+        <button onclick="location.href='02072024.html'">02/07/2024</button>
     </div>
 </body>
 </html>
