--- a/mastermind.html
+++ b/mastermind.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Jogo de Damas</h1>
-    <canvas id="gameCanvas" width="800" height="800"></canvas>
+    <div class="canvas-container">
+        <canvas id="gameCanvas"></canvas>
+    </div>
     <div class="controls">
         <button id="restartButton">Reiniciar Tabuleiro</button>
         <button id="redirectButton">Voltar</button>
