--- a/Central.html
+++ b/Central.html
@@ -34,6 +34,7 @@
         <button onclick="location.href='02072024.html'">02/07/2024</button>
         <button onclick="location.href='03042024.html'">03/07/2024</button>
         <button onclick="location.href='13072024.html'">13/07/2024</button>
+        <button onclick="location.href='27072024.html'">27/07/2024</button>
     </div>
 </body>
 </html>
