--- a/animacao.html
+++ b/animacao.html
@@ -1,43 +1,37 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animação na Televisão</title>
+    <title>Netflix</title>
+    <link rel="shortcut icon" href="img/Logo-site.png">
     <link rel="stylesheet" href="animacao.css">
+    <link rel="stylesheet" href="media.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="tv">
-        <div class="screen">
-            <div class="animation" id="animation">
-                <!-- Scene 1: Two women in their houses -->
-                <div class="scene" id="scene1">
-                    <div class="character woman" id="woman1"></div>
-                    <div class="character woman" id="woman2"></div>
-                </div>
-                <!-- Scene 2: Meeting and hugging -->
-                <div class="scene" id="scene2">
-                    <div class="character woman" id="woman1_meet"></div>
-                    <div class="character woman" id="woman2_meet"></div>
-                </div>
-                <!-- Scene 3: With children -->
-                <div class="scene" id="scene3">
-                    <div class="character woman" id="woman1_family"></div>
-                    <div class="character woman" id="woman2_family"></div>
-                    <div class="character child" id="child1"></div>
-                    <div class="character child" id="child2"></div>
-                    <div class="character child" id="child3"></div>
-                </div>
-                <!-- Scene 4: Growing old -->
-                <div class="scene" id="scene4">
-                    <div class="character old_woman" id="old_woman1"></div>
-                    <div class="character old_woman" id="old_woman2"></div>
-                </div>
-            </div>
-        </div>
-        <button id="powerButton">Ligar</button>
+    <div class="celular__cabeca">
+        <img src="img/Netflix_logo.png" alt="Logo da netflix" class="celular__logo">
+        <img src="img/Editar-perfil.png" alt="Gerenciar Perfis" class="celular__edit">
     </div>
 
-    <script src="animacao.js"></script>
+    <section class="escolha">
+        <h1 class="escolha__texto">Quem está assistindo?</h1>
+        <ul class="escolha__perfil">
+            <li class="escolha__lista">
+                <a href="principal.html" class="perfil"><img src="img/perfil.jpg" alt="Foto de perfil" class="perfil__foto"></a>
+                <p class="perfil__texto">Ana Ísis</p>
+            </li>
+
+            <li class="escolha__lista">
+                <img src="img/Mais-perfil.png" alt="Adicionar perfil" class="perfil__foto mais">
+                <p class="perfil__texto">Adicionar perfis</p>
+            </li>
+        </ul>
+        <button class="botao">Gerenciar perfis</button>
+    </section>
 </body>
 </html>
