--- a/animacao.html
+++ b/animacao.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix</title>
-    <link rel="shortcut icon" href="img/Logo-site.png">
+    <link rel="shortcut icon" href="images/Logo-site.png">
     <link rel="stylesheet" href="animacao.css">
     <link rel="stylesheet" href="media.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,20 +14,20 @@
 </head>
 <body>
     <div class="celular__cabeca">
-        <img src="img/Netflix_logo.png" alt="Logo da netflix" class="celular__logo">
-        <img src="img/Editar-perfil.png" alt="Gerenciar Perfis" class="celular__edit">
+        <img src="images/Netflix_logo.png" alt="Logo da netflix" class="celular__logo">
+        <img src="images/Editar-perfil.png" alt="Gerenciar Perfis" class="celular__edit">
     </div>
 
     <section class="escolha">
         <h1 class="escolha__texto">Quem está assistindo?</h1>
         <ul class="escolha__perfil">
             <li class="escolha__lista">
-                <a href="principal.html" class="perfil"><img src="img/perfil.jpg" alt="Foto de perfil" class="perfil__foto"></a>
+                <a href="principal.html" class="perfil"><images src="images/perfil.jpg" alt="Foto de perfil" class="perfil__foto"></a>
                 <p class="perfil__texto">Ana Ísis</p>
             </li>
 
             <li class="escolha__lista">
-                <img src="img/Mais-perfil.png" alt="Adicionar perfil" class="perfil__foto mais">
+                <img src="images/Mais-perfil.png" alt="Adicionar perfil" class="perfil__foto mais">
                 <p class="perfil__texto">Adicionar perfis</p>
             </li>
         </ul>
