--- a/principal.html
+++ b/principal.html
@@ -7,7 +7,7 @@
     <title>Inicio - Netflix</title>
     <link rel="shortcut icon" href="images/Logo-site.png">
     <link rel="stylesheet" href="animacao.css">
-    <link rel="stylesheet" href="animacao.css">
+    <link rel="stylesheet" href="media.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
