--- a/filme3.html
+++ b/filme3.html
@@ -30,7 +30,7 @@
 <!--VÍDEO PARA SER ASSISTIDO-->
 
     <section class="filme">
-        <video src="vid/vid/VID-20240323-WA0099.mp4" controls="controls" autoplay="autoplay" class="filme5"></video>
+        <video src="vid/VID-20240323-WA0099.mp4" controls="controls" autoplay="autoplay" class="filme5"></video>
     </section>
 
 <!--RODAPE-->
