--- a/animacao.html
+++ b/animacao.html
@@ -22,7 +22,7 @@
         <h1 class="escolha__texto">Quem está assistindo?</h1>
         <ul class="escolha__perfil">
             <li class="escolha__lista">
-                <a href="principal.html" class="perfil"><images src="images/Screenshot_20240629_182037_Instagram.jpg" alt="Foto de perfil" class="perfil__foto"></a>
+                <a href="principal.html" class="perfil"><img src="images/Perfil.jpg" alt="Foto de perfil" class="perfil__foto"></a>
                 <p class="perfil__texto">Ana Ísis</p>
             </li>
 
