--- a/Central.html
+++ b/Central.html
@@ -35,7 +35,7 @@
         <button onclick="location.href='03042024.html'">03/07/2024</button>
         <button onclick="location.href='13072024.html'">13/07/2024</button>
         <button onclick="location.href='27072024.html'">27/07/2024</button>
-        <button onclick="location.href='animacao.html'">08/08/2024</button>
+        <button onclick="location.href='animacao.html'">Seu presente de aniversário 08/08/2024</button>
     </div>
 </body>
 </html>
