--- a/principal.html
+++ b/principal.html
@@ -24,6 +24,7 @@
             <li class="cabecario__item"><a href="principal.html" class="cabecario__link">Séries</a></li>
             <li class="cabecario__item"><a href="principal.html" class="cabecario__link">Filmes</a></li>
             <li class="cabecario__item mobile__sumir"><a href="principal.html" class="cabecario__link">Minha lista</a></li>
+            <li class="cabecario__item mobile__sumir"><a href="Central.html" class="cabecario__link">voltar</a></li>
         </ul>
     </header>
 
