--- a/principal.html
+++ b/principal.html
@@ -23,8 +23,8 @@
             <li class="cabecario__item"><a href="principal.html" class="cabecario__link">Início</a></li>
             <li class="cabecario__item"><a href="principal.html" class="cabecario__link">Séries</a></li>
             <li class="cabecario__item"><a href="principal.html" class="cabecario__link">Filmes</a></li>
+            <li class="cabecario__item"><a href="Central.html" class="cabecario__link">Voltar</a></li>
             <li class="cabecario__item mobile__sumir"><a href="principal.html" class="cabecario__link">Minha lista</a></li>
-            <li class="cabecario__item mobile__sumir"><a href="Central.html" class="cabecario__link">voltar</a></li>
         </ul>
     </header>
 
