--- a/atualizacao.html
+++ b/atualizacao.html
@@ -21,8 +21,9 @@
     </div>
     <div class="container">
         <div class="message">
-   <p>Ultima atualização 27/07/2024 às 21:07</p>
+   <p>Ultima atualização 08/00/2024 às 07:29</p>
             <p>O que mudou:</p>
+            <p>Seu presente de aniversário adicionado na página Central</p>
             <p>Jogo de damas adicionado a pagina "Jogos"</p>
             <p> Central de jogos criado </p>
             <p> Mais um texto adicionado à página "Biblioteca"</p>
