--- a/images.html
+++ b/images.html
@@ -24,6 +24,7 @@
         <img src="images/vestido 2.jpg" class="center">
         <img src="images/Vestido 3.jpg" class="center"> 
         <img src="images/Vestido 4.jpg" class="center">
+        <img src="images/Hihihi.jpg" class="center">
         <!-- Adicione mais imagens conforme necessário -->
     </div>
 </body>
