--- a/Central.html
+++ b/Central.html
@@ -21,6 +21,7 @@
         <div class="message">
             <p>Aqui você pode achar todos os textos que eu fiz pra ti :)</p>
         </div>
+        <button onclick="location.href='04052024.html'">04/05/2024</button>
         <button onclick="location.href='13062024.html'">13/06/2024</button>
         <button onclick="location.href='15062024.html'">15/06/2024</button>
         <button onclick="location.href='17062024.html'">17/06/2024</button>
