--- a/04052024.html
+++ b/04052024.html
@@ -42,6 +42,7 @@
 
   <div class="container">
         <img src="images/apaixonadinha.jpg" class="center">
+        <img src="images/apaixonadinha 2.jpg" class="center">
     </div>
 
 
