--- a/atualizacao.html
+++ b/atualizacao.html
@@ -21,8 +21,9 @@
     </div>
     <div class="container">
         <div class="message">
-   <p>Ultima atualização 08/00/2024 às 07:29</p>
+   <p>Ultima atualização 10/08/2024 às 21:01</p>
             <p>O que mudou:</p>
+            <p> Primeiro texto que escrevi para você adicionado na página Central "04/05/2024"
             <p>Seu presente de aniversário adicionado na página Central</p>
             <p>Jogo de damas adicionado a pagina "Jogos"</p>
             <p> Central de jogos criado </p>
