--- a/13082024.html
+++ b/13082024.html
@@ -20,10 +20,10 @@
         <div class="message">
             <p>13/08/2024</p>
             <p>Na verdade hoje vou falar um pouco sobre o dia 26/03/2024</p>
-            <p>Museu de arte do rio - 11 ate 18 R$10
-Museu do amanhã - 10 até 18 R$ 15
-Ccbb https://ingressos.ccbb.com.br/exposicao-hiromi-nagakura-ate-a-amazonia-com-ailton-krenak__1493  - 09 até 19 - gratuito
-Museu histórico - 10 até 17 - gratuito</p>
+            <p>Museu de arte do rio - 11 ate 18 R$10</p>
+<p>Museu do amanhã - 10 até 18 R$ 15</p>
+<p>Ccbb https://ingressos.ccbb.com.br/exposicao-hiromi-nagakura-ate-a-amazonia-com-ailton-krenak__1493  - 09 até 19 - gratuito</p>
+<p>Museu histórico - 10 até 17 - gratuito</p>
             <p>Isso basicamente era o meu planejamento para o dia 03/05/2024, que seria o dia que eu planejava te pedir em namoro oficialmente. Tem o lugar, o horário de funcionamento e os valores de cada lugar (tirando transporte), todos na mesma região para ser um passeio bem prático e tranquilo já que ou poderíamos ir de um lugar pro outro andando ou de VLT</p>
             <p>Seria um passeio que levaria o dia todo, te levaria pra almoçar (sem ser bk) e no final do dia provavelmente eu te levaria em casa e dormiriamos juntas. Em relação a aliança eu já estava vendo uma ajustável MAS PQ PATRÍCIA UMA AJUSTÁVEL?? Pq não sei o tamanho do seu dedo e daí ficaria mais fácil no primeiro momento e depois já compraria uma do tamanho certinho bem bonita pra gente usar, que por sinal já estava pesquisando preço também.</p>
             <p>Sempre me considerei sua namorada e você a minha a todo momento, mas queria que você me visse nessa posição e que fosse real oficial. Quando você voltar, saiba que quero fazer de tudo isso nossa realidade, vou fazer ser nossa realidade. Tudo o que eu mais quero é ter você do meu lado e faço questão de mostrar pro mundo que sou totalmente, 200% sua.</p>
