--- a/Central.html
+++ b/Central.html
@@ -38,6 +38,7 @@
         <button onclick="location.href='27072024.html'">27/07/2024</button>
         <button onclick="location.href='animacao.html'">Seu presente de aniversário 08/08/2024</button>
         <button onclick="location.href='13082024.html'">13/08/2024</button>
+        <button onclick="location.href='14082024.html'">14/08/2024</button>
     </div>
 </body>
 </html>
