--- a/Central.html
+++ b/Central.html
@@ -39,6 +39,7 @@
         <button onclick="location.href='animacao.html'">Seu presente de aniversário 08/08/2024</button>
         <button onclick="location.href='13082024.html'">13/08/2024</button>
         <button onclick="location.href='14082024.html'">14/08/2024</button>
+        <button onclick="location.href='16082024.html'">16/08/2024</button>
     </div>
 </body>
 </html>
