--- a/16082024.html
+++ b/16082024.html
@@ -31,7 +31,7 @@
 <p>●Trabalhar em 3 hospitais ao mesmo tempo</p>
 <p>●Me mudar para New York (sonho)</p>
 <p>●Comprar um carro, não necessariamente o do ano</p>
-
+<p>-----------------</p>
             <p>Meus planos com você:</p>
 <p>●Comprar/alugar uma casa no Rio ou em portugal ou seja lá onde você estiver</p>
 <p>●Casar</p>
@@ -49,6 +49,8 @@
             <p>Tudo o que me incomoda em relação a gente procuro resolver pra não ter pendências, te entender pra saber o que você precisa, onde tenho que melhorar pra dar certo justamente pra não correr o risco de não ficarmos juntas, por isso faço tanta questão da gente conversar, por isso te peço tanto pra você não sumir, não esquecer de mim, mandar mensagem, me responder pra gente não se afastar e nos perdermos. São quase 7 meses que te tenho oficialmente na minha vida e espero que esse tempo se estenda até a minha morte.</p>
 
             <p>Independente de qualquer coisa sempre vou agir como se você já fosse minha namorada, como eu escrevi a uns dias atrás, pra mim você já é. Em algum momento você pode decidir não ficar mais e se for o caso, pode se passar semanas como da última vez, meses e até anos, se você me procurar eu vou sempre, SEMPRE estar te esperando, pronta pra viver tudo contigo. Pra mim, dentro de mim nada vai mudar. No fim de cada dia eu vou sempre te amar cada vez mais e não vou em hipótese alguma desistir da gente.</p>
+         
+            <p>E sabe aquela tatuagem com seu nome? Eu vou tatuar em azul no meu peito, igual aquela música da Ariana Grande.</p>
         </div>
         <button onclick="location.href='Central.html'">Biblioteca</button>
     </div>
