--- a/14082024.html
+++ b/14082024.html
@@ -26,7 +26,7 @@
 
             <p>Mas eu não negaria pra você tlgd né</p>
         </div>
-        <button onclick="location.href='Central.html'">Biblioteca</button>
+        <button onclick="location.href='index.html'">pagina principal</button>
     </div>
 </body>
 </html>
