--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Barra de Navegação -->
     <nav class="navbar">
         <div class="logo">
-            <a href="index.html">MeuSite</a>
+            <a href="index.html">Início</a>
         </div>
         <ul class="nav-links">
             <li><a href="index.html">Início</a></li>
