--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="index.html">Início</a></li>
-            <li><a href="lyrics.html">Letra</a></li>
+            <li><a href="musica.html">Letra</a></li>
             <li><a href="password.html">Imagens</a></li>
             <li><a href="https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa">Spotify</a></li>
         </ul>
