--- a/principal.html
+++ b/principal.html
@@ -136,6 +136,27 @@
 
                 </a>
             </div>
+
+<div class="container__video carrossel_item">
+                <a href="filme8.html">
+                   <img src="images/filme8.png" alt="Video" class="cropped">
+
+                </a>
+            </div>
+
+<div class="container__video carrossel_item">
+                <a href="filme9.html">
+                   <img src="images/filme9.png" alt="Video" class="cropped">
+
+                </a>
+            </div>
+
+<div class="container__video carrossel_item">
+                <a href="filme10.html">
+                   <img src="images/filme10.png" alt="Video" class="cropped">
+
+                </a>
+            </div>
         
             <div id="limitador">limitador</div>
         </div>
