--- a/images.html
+++ b/images.html
@@ -36,6 +36,7 @@
         <img src="images/Vestido 3.jpg" class="center"> 
         <img src="images/Vestido 4.jpg" class="center">
         <img src="images/Hihihi.jpg" class="center">
+        <img src="images/VideoCapture_20240908-140943.jpg" class="center">
         <button onclick="location.href='14082024.html'">14/08/2024</button>
         <!-- Adicione mais imagens conforme necessário -->
     </div>
