--- a/Central.html
+++ b/Central.html
@@ -17,6 +17,7 @@
             <li><a href="index.html">Início</a></li>
             <li><a href="Central.html">Biblioteca</a></li>
             <li><a href="musica.html">Letra</a></li>
+            <li><a href="animacao.html">Netflix 08/08/2024</a></li>
             <li><a href="password.html">Imagens</a></li>
             <li><a href="https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa">Spotify</a></li>
             <li><a href="jogos.html">Jogos</a></li>
@@ -46,7 +47,6 @@
         <button onclick="location.href='03072024.html'">03/07/2024</button>
         <button onclick="location.href='13072024.html'">13/07/2024</button>
         <button onclick="location.href='27072024.html'">27/07/2024</button>
-        <button onclick="location.href='animacao.html'">Seu presente de aniversário 08/08/2024</button>
         <button onclick="location.href='13082024.html'">13/08/2024</button>
         <button onclick="location.href='16082024.html'">16/08/2024</button>
         <button onclick="location.href='26082024.html'">26/08/2024</button>
