--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="Central.html">Biblioteca</a></li>
             <li><a href="musica.html">Letra</a></li>
             <li><a href="password.html">Imagens</a></li>
+            <li><a href="animacao.html">Netflix 08/08/2024</a></li>
             <li><a href="https://open.spotify.com/playlist/1bN2og7ffd4otRABJQakPx?si=E0WXqAb6TECegd8VkS3ZQQ&pi=RohRmneIR9qNa">Spotify</a></li>
             <li><a href="jogos.html">Jogos</a></li>
         </ul>
