--- a/Central.html
+++ b/Central.html
@@ -52,6 +52,7 @@
         <button onclick="location.href='26082024.html'">26/08/2024</button>
         <button onclick="location.href='28082024.html'">28/08/2024</button>
         <button onclick="location.href='31082024.html'">31/08/2024</button>
+        <button onclick="location.href='16092024.html'">16/09/2024</button>
     </div>
 </body>
 </html>
