--- a/Central.html
+++ b/Central.html
@@ -53,6 +53,7 @@
         <button onclick="location.href='28082024.html'">28/08/2024</button>
         <button onclick="location.href='31082024.html'">31/08/2024</button>
         <button onclick="location.href='16092024.html'">19/09/2024</button>
+        <button onclick="location.href='23102024.html'">23/10/2024</button>
     </div>
 </body>
 </html>
